--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calorie Counter</title>
@@ -54,4 +53,5 @@
         </div>
     </main>
 </body>
+<script src="./script.js"></script>
 </html>
